Created LICENSE.txt; Edited settings and Form1

--- a/anvil.yaml
+++ b/anvil.yaml
@@ -2,6 +2,7 @@ allow_embedding: false
 package_name: Classic_1
 name: Classic 1
 startup_form: Form1
+uplink_visible: true
 runtime_options: {version: 2, client_version: '3', server_version: python3-sandbox,
   server_spec: null}
 services:
